# edl_conversion

./: Cory Carson_S3_Main Product Preview_V6_80234732_DIA.edl  README.md  edl_script.py  edl_script.py.save  example.edl  hours.md  main.py  pyproject.toml  setup.py  tasks.py  time_code.py
src/: __init__.py  main.py
src/entities/: __init__.py  adaptive_list.py  audio_title.py  delete_button.py  entry_row.py  time_code.py
src/services/: __init__.py  conversion_service.py  edl_script.py
src/tests/: test_adaptive_list.py
